<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="5dp"
    android:id="@+id/parent_layout">

    <TextView
        android:id="@+id/foodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:lines="1"
        android:text="@string/food_text" />

    <TextView
        android:id="@+id/foodBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/foodName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/Brand" />

    <TextView
        android:id="@+id/foodCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/foodName"
        android:text="@string/Calories" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignStart="@+id/foodName"
        android:layout_alignEnd="@+id/foodCalories"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="-1dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible" />
</RelativeLayout>